# MindCast

./: .dockerignore  .env.example  .gitignore  AI_PROMPTS_EXPORT.md  AI_PROMPTS_OPTIMIZED.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  plan-mindCast.prompt.md
backend/: config.py  logging_config.py  models.py
backend/agents/: base.py  guest.py  host.py  orchestrator.py  personas.py
backend/api/: routes.py  schemas.py
backend/knowledge/: __init__.py  base.py  chroma_kb.py
backend/services/: audio_service.py  document_service.py  guest_pool_service.py  host_service.py  llm_service.py  news_service.py  run_logger.py  tts_service.py
data/: guest_pool.json  host.json
docs/: 深度播客访谈特质研究.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: GeneratePanel.vue  GuestDrawer.vue  PodcastPlayer.vue  SettingsPanel.vue  WorkflowWizard.vue
frontend/src/stores/: workflow.js
frontend/src/views/: Episode.vue  Home.vue
scripts/: run_text_pipeline.py
tests/: test_agents.py  test_news_relevance.py  test_tavily.py  test_tts.py
